<resources>
    <string name="app_name">Student Help Service</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>
    <string name="walk_safe_information">The University has a 24-hour Campus Police office and numerous emergency call boxes around campus. In addition, students can call Walk Safe, a service that provides escorts to students to destinations on and around campus</string>
    <string name="answer_walksafe">- Just dial 0 (ext. 0), or call ext. 3504 from any University of Windsor phone.\n\n- Press the “Walksafe” button on any Bell Payphone on Campus.\n\n- Ask a Walksafe Volunteer who is already on duty.</string>
    <string name="question_one_walksafe">How to contact Walksafe to request a walk?</string>
    <string name="answer_two_walksafe">Name: Herman Dayal \nPhone: (519) 253 - 3000 ext. 3504 \nEmail: walksafe@uwindsor.ca \nAddress: 401 Sunset Avenue 2nd floor CAW Student Centre Windsor, Ontario \nPin: N9B 3P4</string>
    <string name="question_two">Contact Information?</string>
    <string name="question_three">Office Hours?</string>
    <string name="answer_three_walksafe">Monday-Friday (7:30 pm - 12:30 am)</string>
    <string name="mental_mission">The purpose of the University of Windsor Student Mental Health Strategy is to foster a thriving University community that actively promotes mental well-being and supports students to flourish in both their personal and academic lives.</string>
    <string name="mental_vision">The University of Windsor is a caring, compassionate and connected community where mental well-being is interwoven into everything we do, open conversations about mental health take place, supports are visible and readily available, and students are empowered to care for themselves and each other.</string>
    <string name="student_counselling">Centre Free, confidential counselling provided by professional therapists\n\nLocation: CAW Student Centre Room 293 \n\nOffice Hours: Monday-Friday: 8:30 am-4:30 pm \n\nPhone No.: 519-253-3000 ext. 4616 \n\nEmail id: www.uwindsor.ca/scc scc@uwindsor.ca</string>
    <string name="peer_support"><![CDATA[A safe, inclusive space that provides free, confidential peer counselling by trained University of Windsor student volunteers. \n\nLocation: CAW Student Centre Room 291 \n\nOffice Hours: Monday-Friday: 10:00 am-8:00 pm \n\nWebsite: Fall & Winter semesters only. www.uwsa.ca/uwsaservices/peer-support-centre \n\nEmail id: psc@uwindsor.ca]]></string>
    <string name="health_service_in_mental">Confidential healthcare for University of Windsor students provided by a team of physicians and nurses. \n\nLocation: CAW Student Centre Room 242 \n\nOffice Hours: Monday-Friday: 9:00 am-5:00 pm (Friday closed 1:00-2:00 pm) \n\nPhone No. 519-973-7002 \n\nWebsite: www.uwindsor.ca/health</string>
    <string name="good2talk_text">(provincial telephone service) Free, anonymous, confidential 24/7 helpline for Ontario post-secondary students. \n\nPhone No. 1-866-925-5454 \n\nWebsite: www.good2talk.ca</string>
    <string name="myss_text">Keep.me SAFE Text or call counsellors in over 30 different languages. *For International and exchange students only. Free, confidential, 24/7 support \n\nPhone No. 1-844-451-9700 \n\nWebsite: www.keepmesafe.org</string>
    <string name="career_text">A personal assistant helping students prepare for their career by seeking timely career advising support from professional expertise. They are here to guide through career exploration, interview preparation, job search strategies, resume and cover letters</string>
    <string name="career_text_in">Career Development and Experiential Learning (CDEL) launched an exciting, new peer advising program to allow us to better support students with readily available assistance for those that visit the career resource centre.</string>
    <string name="resume_and_cover_letter_job_searching_interview_skills_career_planning">Resume and Cover Letter, Job Searching, Interview Skills, Career Planning</string>
    <string name="workshop_text">Have the experience of learning Management Platform by registering and participating in the workshops you are interested in</string>
    <string name="login_infor_text">Please Login to mysuccess with your Uwin ID and Password to view the events or workshops conducted</string>
    <string name="campus_help_text">Campus Services provides valuable, supportive and integrated services to enhance the campus experience of our students and create a vibrant university community</string>
    <string name="book_text"><![CDATA[Purchase the ultimate in convenience with the UWin Bookstore & Food Plan for only $695.00. The UWin Plan gives you $500 for purchases at the Campus Bookstore and $195 for use at any food location on campus, including our franchise partners]]></string>
    <string name="purchase_text"><![CDATA[Visit the UwinCard Office to pay for and activate your UWin Bookstore & Food Plan (Lower Level, CAW Student Centre)]]></string>
    <string name="parking_text">The University of Windsor has over 2,800 parking spaces on campus. Access to these lots is controlled by parking permits, meters and gates during enforcement hours (Every day from 7am to 11pm).</string>
    <string name="parking_ofice">Joyce Entrepreneurship Centre, \n1st Floor \n(519) 253-3000 Ext. 2413 \nparking@uwindsor.ca</string>
    <string name="food_text">Food Services is a division of Campus Services, at the University of Windsor. Food Services offers customer-oriented eateries featuring countless and diverse menu choices. We have created an environment that offers customers quality, value and convenience. We are always working to bring you exciting and nutritious choices that fit in with your lifestyle. Your options include popular franchises, national brands, comfort foods, gourmet coffee, smoothies, sushi and much more. We are committed to providing an outstanding, integrated food experience for the campus community that emphasizes culinary excellence, sustainable food practices and customer satisfaction.</string>
    <string name="food_service_text">Contact the UWinCARD Office at: (519) 253-3000 ext. 8946 uwincard@uwindsor.ca</string>
    <string name="conference_text">We understand the importance of your upcoming conference or meeting. Our award winning team of catering and conference specialists will assist you with the planning to ensure that your event is a success.</string>
    <string name="conference_service_text">750 Sunset Avenue Alumni Hall Room 120 Windsor, Ontario N9B 3P4</string>
    <string name="contact_conference_text">Rana Chan \nConference Coordinator <b>\n(519) 253 - 3000 ext. 3276</b> \nconfserv@uwindsor.ca \nranachan@uwindsor.ca</string>
    <string name="forge_text">Discuss your training style, goals and preferences during your first consultation. From this, we will match you with the ideal Certified Personal Trainer Consultations must be pre-booked.</string>
    <string name="forge_fit_text">This 10 week program is all about creating a more healthy-active lifestyle. Each week, you will also work in a small group with one of our trainers in the gym!.The 10 week program also includes weekly personalized diet advice and check-ins from one of our qualified trainers</string>
    <string name="persnoal_text_training">Variety of Personal Training Options are offered. Our certified ForgeFit Training staff will develop a personalized training plan that fits your body, lifestyle and budget</string>
    <string name="session_text">Private Sessions 2.Partner Sessions 3. Group Sessions All the three options have 1, 10 and 20 session packages</string>
    <string name="timing_text">Monday: Yoga w/ \nNicole Tuesday: Body Blast Workout w/ Gia \nWednesday: Pilates w/ Gia \nThursday: Sculpt and Strength w/ Gia \nFriday: Essentrics Stretch and Tone w/ Marnie</string>
    <string name="misconduct_text">At UWindsor, sexual misconduct includes all forms of sexually inappropriate behaviour and sexual violence. It includes, but is not limited to, rape and sexual assault, sexual and gender-based harassment, stalking, cyber harassment, and relationship violence</string>
    <string name="get_suppport_text">If you are in need of support but aren\'t sure what you should do or where you should go for help, you can start by speaking to Anne at the Sexual Misconduct Response and Prevention Office. She is here to listen. What happens next is up to you. Please know that you can seek her support without any obligation to formally report. You can also seek support regardless of when the assault occurred -- whether it was recently or a long time ago, you still deserve to be listened to</string>
    <string name="emergency_text">If you or someone around you is in danger right now, please call 911 immediately. If you are on campus, you can also call the Campus Police at (519) 253-3000, Ext. 4444. To know more about it \n\nplease visit: http://www.uwindsor.ca/sexual-assault/298/get-support</string>
    <string name="give_support_text">Has someone disclosed an experience that you think might qualify as sexual misconduct? We can offer information on how to provide support. \nIf someone discloses an experience of sexual violence to you, it is probably because they trust and feel safe with you. \nThat’s a big deal and something we want to respond to with care and respect. \nAbove all else, remember that when someone discloses their voice and their choices come first. They are in the best decision to make choices about what will be right for them. To know more about it \n\nplease visit: http://www.uwindsor.ca/sexual-assault/299/give-support</string>
    <string name="does_this_text">This office exists, foremost, to provide support to members of our campus who have been subjected to sexual misconduct. Anne, the Acting Sexual Misconduct Officer, is here to listen. She can assist with referrals and accommodations and can provide information on your reporting options.</string>
    <string name="confidiential_text">Your confidentiality is very important and will be protected unless there is immediate concern for harm to self or others. You are encouraged to discuss any concerns you may have about confidentiality with Anne.</string>
    <string name="contact_sexual_text">To contact \nAnne Rudzinski \nPhone (519) 253-3000 , Extension 4550.</string>
</resources>
