<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/tvTextWalk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/jbold"
        android:gravity="center"
        android:padding="10dp"
        android:text="WALK SAFE"
        android:textColor="@color/bg_bubble_self2"
        android:textSize="24sp" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTextWalk"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:fontFamily="@font/semibold"
                android:text="@string/walk_safe_information"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/question_one_walksafe"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/answer_walksafe"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/question_two"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/answer_two_walksafe"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/question_three"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/answer_three_walksafe"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>