<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvTextSexual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/jbold"
        android:gravity="center"
        android:padding="10dp"
        android:text="Sexual Assault and Sexual Misconduct"
        android:textColor="@color/bg_bubble_self2"
        android:textSize="24sp" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTextSexual"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:fontFamily="@font/semibold"
                android:text="If you have experienced sexual misconduct or violence you deserve help and support. Your voice and your choices matter"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="What is Sexual misconduct"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/misconduct_text"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="Who can seek support"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Students Faculty Staff"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="Get Support"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/get_suppport_text"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="Emergency support"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/emergency_text"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="Give Support"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/give_support_text"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="What does this office do"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/does_this_text"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="WIll this be confidential"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/confidiential_text"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="Contact"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/contact_sexual_text"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                />



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>