<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTextMental"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/jbold"
        android:gravity="center"
        android:padding="10dp"
        android:text="Mental Health Strategy"
        android:textAllCaps="true"
        android:textColor="@color/bg_bubble_self2"
        android:textSize="24sp" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTextMental"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:text="Mission"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mental_mission"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:text="Vision"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mental_vision"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/jbold"
                android:padding="10dp"
                android:text="Mental Health Resources"
                android:textColor="@color/bg_bubble_self2"
                android:textSize="20sp" />


            <Button
                android:id="@+id/viewOnCampus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/dropdown"
                android:drawableEnd="@drawable/ic_menu"
                android:fontFamily="@font/jbold"
                android:padding="20dp"
                android:gravity="left"
                android:text="On-Campus Resources"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/onCampusHide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/jbold"
                    android:padding="10dp"
                    android:text="Student Counselling"
                    android:textColor="@color/bg_bubble_self2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/regular"
                    android:padding="10dp"
                    android:text="@string/student_counselling"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/jbold"
                    android:padding="10dp"
                    android:text="Peer Support Centre"
                    android:textColor="@color/bg_bubble_self2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/regular"
                    android:padding="10dp"
                    android:text="@string/peer_support"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/jbold"
                    android:padding="10dp"
                    android:text="Student Health Services"
                    android:textColor="@color/bg_bubble_self2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/regular"
                    android:padding="10dp"
                    android:text="@string/health_service_in_mental"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />


            </LinearLayout>

            <Button
                android:id="@+id/view24Hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/dropdown"
                android:drawableEnd="@drawable/ic_menu"
                android:fontFamily="@font/jbold"
                android:padding="20dp"
                android:gravity="left"
                android:text="24-Hour Support"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/fullHoursHelp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/jbold"
                    android:padding="10dp"
                    android:text="Good2Talk"
                    android:textColor="@color/bg_bubble_self2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/regular"
                    android:padding="10dp"
                    android:text="@string/good2talk_text"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/jbold"
                    android:padding="10dp"
                    android:text="‘My SSP’ App"
                    android:textColor="@color/bg_bubble_self2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/regular"
                    android:padding="10dp"
                    android:text="@string/myss_text"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>